kubernetes/base/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mission
  labels:
    app.kubernetes.io/part-of: mdi-sovereign
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
